--- a/skul/package.json
+++ b/skul/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "framer-motion": "^11.3.28",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
