--- a/skul/package.json
+++ b/skul/package.json
@@ -28,7 +28,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.5.3"
+    "tailwind-merge": "^2.5.3",
+    "rollup": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
