--- a/skul/package.json
+++ b/skul/package.json
@@ -29,7 +29,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.3",
-    "rollup": "^3.0.0"
+    "@rollup/rollup-linux-x64-gnu": "^4.9.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
