--- a/skul/package.json
+++ b/skul/package.json
@@ -29,9 +29,13 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.3",
-    "@rollup/rollup-linux-x64-gnu": "^4.9.5"
+    "@rollup/rollup-linux-x64-gnu": "^4.9.5",
+    "braces": ">=3.0.3",
+    "micromatch": ">=4.0.8",
+    "vite": ">=5.1.8"
   },
   "devDependencies": {
+    "micromatch": ">=4.0.8",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
@@ -42,6 +46,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.1.6"
+    "vite": ">=5.1.8",
+    "braces": ">=3.0.3"
   }
 }
