--- a/skul/package.json
+++ b/skul/package.json
@@ -29,7 +29,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.5.3",
-    "@rollup/rollup-linux-x64-gnu": "^4.9.5",
+    "rollup": "^4.9.5",
     "braces": ">=3.0.3",
     "micromatch": ">=4.0.8",
     "vite": ">=5.1.8"
